Changes to results chapters from Inge's comments

--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -87,7 +87,9 @@ When a patient has a clot in one of the coronary arteries, they often undergo pe
 As BMI is associated with increased rates of thrombotic events and platelets are one of the key cells involved in thrombosis, it is possible that high BMI causes platelet hyperactivity. Various studies have attempted to address this question. There is mixed evidence for an effect of BMI on platelet hyperactivity. For example, in patients who were treated with clopidogrel there was a positive association between BMI and platelet activation in response to the agonist ADP[@Nardin2015]. Studies looking at BMI and platelet function are often limited by small sample sizes and are often restricted to patients being on antiplatelet therapy[@Deharo2014; @Sibbing2007; @Pankert2014]. Less is known about the association between BMI and platelet function in the absence of antiplatelet therapies. To address this, there needs to be a cohort which has information about BMI, potential circulating intermediates and platelet function. Genetic data would also help address the directionality of the effect. As this is currently not all available within a large cohort, separate cohorts are required to explore different associations.
 
 ## Experimental techniques to measure platelet function {#platelet-function-techniques}
-Platelet function can be measured by various laboratory techniques. Light transmission aggregometry (LTA) quantifies platelet aggregation by how much light passes through the sample. The more aggregation, the clearer the solution and the more light passes through and is detected. Other techniques routinely used include using flow cytometry. Measuring resting levels of receptors using fluorescently labelled antibodies provides information about the function of the platelet[@Hu2017]. Some receptors change conformation and become exposed in response to platelet agonists (such as the integrin α~IIb~β~3~). The adhesion receptor P-selectin is stored in α-granules and becomes rapidly expressed on the platelet plasma membrane in response to agonist stimulation. Such platelet agonists include as protease-activating receptor activating peptide 1 (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Another technique which can provide useful information about platelets is measuring calcium mobilisation by using a fluorescent calcium indicator. Activation of various receptors causes downstream activation of phospholipase C (PLC). In turn, PLC produces inositol-1,4,5-trisphosphate (IP~3~), thereby releasing calcium from the intracellullar stores via IP~3~ receptors (IP~3~-R) in the endoplasmic reticulum[@Varga-Szabo2009]. Another marker of platelet activation and coagulation is phosphatidylserine (PS) exposure. Under basal conditions, PS is mainly present in the inner leaflet of the phospholipid bilayer. Upon activation (e.g. by dual stimulation using collagen and thrombin), the PS is becomes exposed on the outer surface of the membrane, thereby providing a binding site for factor Xa (FXa) and thus fibrin formation[@Bevers1983]. Therefore PS reflects the  Changes in PS exposure can be measured using a fluorescently labelled antibody.
+Platelet function can be measured by various laboratory techniques. Light transmission aggregometry (LTA) quantifies platelet aggregation by how much light passes through the sample. The more aggregation, the clearer the solution and the more light passes through and is detected[@Born1962]. LTA is considered the gold standard, however there are other techniques which can measure platelet aggregation. Plate aggregation uses the same principles as LTA, however a 96 well plate is used instead of using larger cuvettes, along with a plate reader[@Chan2018]. This allows less sample and therefore more conditions to be assessed, thereby allowing full concentration response curves to be derived using various platelet agonists. More recent techniques have been developed which utilise electrodes to quantify aggregation such as Multiple Electrode Aggregometry (MEA)[@Toth2006]. This technique uses four electrodes and measures aggregation in whole blood by using impedance aggregometry. The readings from MEA, unlike LTA, are more affected by the platelet count, where a higher platelet count causes more aggregation[@Toth2006].
+
+Other techniques routinely used include using flow cytometry. Measuring resting levels of receptors using fluorescently labelled antibodies provides information about the function of the platelet[@Hu2017]. Some receptors change conformation and become exposed in response to platelet agonists (such as the integrin α~IIb~β~3~). The adhesion receptor P-selectin is stored in α-granules and becomes rapidly expressed on the platelet plasma membrane in response to agonist stimulation. Such platelet agonists include as protease-activating receptor activating peptide 1 (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Another technique which can provide useful information about platelets is measuring calcium mobilisation by using a fluorescent calcium indicator. Activation of various receptors causes downstream activation of phospholipase C (PLC). In turn, PLC produces inositol-1,4,5-trisphosphate (IP~3~), thereby releasing calcium from the intracellullar stores via IP~3~ receptors (IP~3~-R) in the endoplasmic reticulum[@Varga-Szabo2009]. Another marker of platelet activation and coagulation is phosphatidylserine (PS) exposure. Under basal conditions, PS is mainly present in the inner leaflet of the phospholipid bilayer. Upon activation (e.g. by dual stimulation using collagen and thrombin), the PS is becomes exposed on the outer surface of the membrane, thereby providing a binding site for factor Xa (FXa) and thus fibrin formation[@Bevers1983]. Therefore PS reflects the  Changes in PS exposure can be measured using a fluorescently labelled antibody.
 
 (ref:scaption-platelet-diagram-background) Cartoon of integrin α~IIb~β~3~ activation, P-selectin expression and platelet-leukocyte interactions
 
