--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -34,7 +34,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 This work is published in the journal Platelets[@Goudswaard2022]. I performed all analyses, created all figures and tables and wrote the manuscript. 
 
 ## Background
-As indicated in the background chapter (Chapter \@ref(background)), clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders such as CHD and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis[@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets[@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Platelet function can be directly assessed by various methods (section \@ref(platelet-function-techniques), but these techniques are not widely available or readily standardized. Haematology analyzers such as the Sysmex XN series are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Mechanisms of platelet hyperactivity are unclear, but it is possible that alterations in properties of platelets such as PLT, MPV and IPF/IPC may play a role. 
+The introduction chapter (Chapter \@ref(background)) indicated that clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders such as CHD and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis[@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets[@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Platelet function can be directly assessed by various methods (section \@ref(platelet-function-techniques), but these techniques are not widely available or readily standardized. Haematology analyzers such as the Sysmex XN series are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Mechanisms of platelet hyperactivity are unclear, but it is possible that alterations in properties of platelets such as PLT, MPV and IPF/IPC may contribute to the phenotype. 
 
 Immature platelets (also known as reticulated platelets) are the youngest platelets in circulation and are detected based on having a greater forward scatter (FSC, an indicator of their size) and a greater side fluorescence (SFL, an indicator of their mRNA content)[@Ibrahim2014]. More immature platelets are indicative of enhanced platelet production[@Lev2016a] and these platelets are believed to be more prothrombotic than older circulating platelets, with more dense granule release and increased P-selectin expression[@Ibrahim2014; @Lev2016a; @Bernlochner2015a]. Higher immature platelet count is associated with adverse cardiovascular outcomes in patients with coronary artery disease[@Ibrahim2014] and reduced effectiveness of antiplatelet therapies[@Bernlochner2015a; @Ibrahim2012], suggesting that hyperactive immature platelets may contribute to adverse vascular events. Immature platelets have also been suggested to be less responsive to antiplatelet therapies such as prasugrel in acute coronary syndrome patients[@Bernlochner2015a]. 
 
@@ -67,7 +67,7 @@ Participants completed online questionnaires wherein they reported their height 
 
 ### Genetic data and instrument for BMI
 
-INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-Channel (MC) Instrument using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK) and the QC of genotype data was implemented as described by Astle et al.[@Astle2016]. The imputation panel used was the 1000 genomes phase-3-UK-10K[@Astle2016]. A genetic instrument for BMI was constructed using 654 genetic variants that were associated with BMI at P<5x10^-8^ in the inverse variance weighted fixed-effect meta-analysis of GWAS of 700000 individuals of European ancestry[@Yengo2018]. This meta-analysis consisted of around 250000 adults from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450000 adults from the UK Biobank study. Only 0.05 % of UK Biobank participants were included in the current INTERVAL study (of N=2737). These participants were not excluded to increase power. The weighted GRS was made using PLINK 2.0 software[@Purcell2007a] using the effect alleles and beta coefficients from the source GWAS. The score was calculated by multiplying the number of effect alleles at each SNP by its effect estimate (beta), summing these, and dividing by the total number of SNPs included. The GRS therefore can be interpreted as the average per-SNP effect on BMI for each individual. 
+INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-Channel (MC) Instrument using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK) and the QC of genotype data was implemented as described by Astle et al. = [@Astle2016]. The imputation panel used was the 1000 genomes phase-3-UK-10K[@Astle2016]. A genetic instrument for BMI was constructed using 654 genetic variants that were associated with BMI at P<5x10^-8^ in the inverse variance weighted fixed-effect meta-analysis of GWAS of 700000 individuals of European ancestry[@Yengo2018]. This meta-analysis consisted of around 250000 adults from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450000 adults from the UK Biobank study. Only 0.05 % of UK Biobank participants were included in the current INTERVAL study (of N=2737). These participants were not excluded to increase power. The weighted GRS was made using PLINK 2.0 software[@Purcell2007a] using the effect alleles and beta coefficients from the source GWAS. The score was calculated by multiplying the number of effect alleles at each SNP by its effect estimate (beta), summing these, and dividing by the total number of SNPs included. The GRS therefore can be interpreted as the average per-SNP effect on BMI for each individual. 
 
 ### Study population
 
