--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -35,22 +35,11 @@ The following chapter reports a specifically designed patient study. Recruitment
 
 ## Background
 
-As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis[@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was also positively associated with whole blood platelet aggregation in response to various platelet agonists (adrenaline, protease activating receptor 1 peptide (PAR1-AP/TRAP-6) and adenosine diphosphate (ADP)) in a cardiac surgery cohort. Although these analyses suggest that higher BMI leads to platelet hyperactivity, this association was not directly assessed due to the limited platelet function data available. In COPTIC, the only platelet function data was whole blood platelet aggregation; there are other platelet function assays which may provide important information about the platelets activation. COPTIC was also a cohort which had a history of cardiovascular disease, therefore associations could be confounded by the presence of cardiovascular disease.
+As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis[@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was also positively associated with whole blood platelet aggregation in response to various platelet agonists (adrenaline, protease activating receptor 1 peptide (PAR1-AP/TRAP-6) and adenosine diphosphate (ADP)) in a cardiac surgery cohort. Although these analyses suggest that higher BMI leads to platelet hyperactivity, this association was not directly assessed due to the limited platelet function data available. In COPTIC, the only available platelet function data was whole blood platelet aggregation; there are other platelet function assays which may provide more extensive information about platelet activation. COPTIC was also a cohort which had a history of cardiovascular disease, therefore associations could be confounded by the presence of cardiovascular disease. Therefore, studies which have information about body composition and detailed platelet function assays are required.
 
-Upon activation, platelets adhere to the vessel endothelium, where they undergo shape change, release their granules and aggregate. There are numerous laboratory techniques that can be used to measure platelet function[@Paniccia2015]. Experiments include flow cytometry which use fluorescently tagged antibodies that bind to platelet receptors. Some receptors increasingly expose their ligand binding sites upon stimulation such as the integrin α~IIb~β~3~, which is important for aggregation of platelets (Figure \@ref(fig:platelet-activation-2)). The adhesion receptor P-selectin is expressed on α-granules and is therefore only expressed when platelet secrete their α-granules. Platelet agonists which are able to further expose the integrin α~IIb~β~3~ include PAR1-AP and collagen-related peptide (CRP). Other experiments commonly used to test platelet function include light transmission aggregometry (LTA), which measures the degree of platelet aggregation in response to platelet agonists by how much light passes through the sample. Techniques such as LTA are difficult to implement with patient samples due the requirement of a substantial amount of sample and due to experiments being time consuming. As platelet function declines over a few hours after removal from circulation[@Goss2019], it is preferable to opt for experiments which can be performed quickly. It is also possible to explore the intracellular signalling which occurs within the platelets by using techniques such as Western blotting and tandem mass tag mass spectrometry (TMT-MS), which use targeted and untargeted methods, respectively, to measure protein or phosphoprotein levels. 
+When an individual struggles with maintaining weight loss and there is concern for their health, bariatric surgery is advised. This surgery utilises various techniques (gastric band, bypass or sleeve) that aim to restrict the size of the stomach, therefore reducing appetite. Current NHS guidelines for bariatric surgery indicate that surgery is available for those with a BMI of 40+ kg/m^2^. A BMI of over 40kg/m^2^ is current classified as having severe obesity. This group of patients is therefore a suitable patient group to obtain blood samples from in order to further characterise effects of a sustained high BMI.
 
-(ref:scaption-platelet-diagram) Cartoon of integrin α~IIb~β~3~ and P-selectin on platelets.
-(ref:caption-platelet-diagram) **Cartoon of integrin α~IIb~β~3~ activation and P-selectin expression on platelets.** Upon platelet activation by a strong agonist such as CRP, the integrin α~IIb~β~3~ exposes its binding site for fibrinogen and cross-links platelets. P-selectin is expressed in the membrane of alpha granules within platelets. Upon platelet activation, platelets secrete these granules and P-selectin is then expressed on the outer membrane. P-selectin on platelets can bind to PSGL-1 leukocytes. Figure made using BioRender.com.
-```{r platelet-activation-2, echo = FALSE, fig.cap="(ref:caption-platelet-diagram)", fig.align = "center", fig.scap="(ref:scaption-platelet-diagram)"}
-include_graphics(path = "figure/Bariatric_study/Platelet_activiation_integrin_p-selectin.png", dpi = NA)
-```
-
-Previous studies have attempted to determine the direct effects of BMI on platelet function and signalling, where there is conflicting evidence regarding how BMI affects platelet function[@Barrachina2019; @Nardin2015; @Deharo2014; @Sibbing2007]. Such studies have focused on the relationship between BMI and platelet function in patients receiving dual antiplatelet therapy (DAPT). In these studies there is evidence that in people with higher BMI, antiplatelet drugs such as prasugrel, which acts at the P2Y~12~ receptor, may not be as effective at suppressing platelet activity[@Deharo2014]. These findings have come from measuring phospho-VASP as an indicator of platelet function at the P2Y~12~ receptor. PGE1 suppresses platelet function by acting at a G~s~ coupled receptor, causing a rise in cAMP and phospho-VASP. Activation of the P2Y~12~ receptor, which is G~i/o~ coupled, by the platelet agonist ADP reduces this VASP phosphorylation. Lower phospho-VASP levels are therefore indicative of less inhibition by the antiplatelet drug and more activation of the platelet by ADP. It is less clear what the relationship is between BMI and platelet function in those who are not on any antiplatelet therapy and across other platelet function assays.
-
-The aims of this chapter were to:
-
-1) Optimise laboratory techniques to assess platelet function in bariatric patients pre-surgery (BMI >40kg/m^2^) and healthy controls (BMI 18-25kg/m^2^) .
-2) Determine whether high BMI is associated with an alteration in platelet function and signalling (Figure \@ref(fig:BMI-platelet-overview2)).
+Previous studies have attempted to determine the direct effects of BMI on platelet function and signalling, where there is conflicting evidence regarding how BMI affects platelet function[@Barrachina2019; @Nardin2015; @Deharo2014; @Sibbing2007]. Such studies have focused on the relationship between BMI and platelet function in patients receiving dual antiplatelet therapy (DAPT). In these studies there is evidence that in people with higher BMI, antiplatelet drugs such as prasugrel, which acts at the P2Y~12~ receptor, may not be as effective at suppressing platelet activity[@Deharo2014]. These findings have come from using a phospho-VASP assay. PGE1 suppresses platelet function by acting at a G~s~ coupled receptor, resulting in activation of adenylate cyclase and a rise in cAMP, subsequent activation of PKA and phosphorylation of VASP. G~i/o~ coupled GPCRs oppose G~s~ pathways: activation of the ADP receptor P2Y~12~ receptor inhibits activation of adenylate cyclase through G~i/o~ thereby opposing PGE1-mediatied VASP phosphorylation. Lower phospho-VASP levels are therefore indicative of less inhibition by the antiplatelet drug and more activation of the platelet by ADP. It is less clear what the relationship is between BMI and platelet function in those who are not on any antiplatelet therapy and across other platelet function assays. In this study I therefore aimed to determine whether high BMI is associated with an alteration in platelet function and signalling (Figure \@ref(fig:BMI-platelet-overview2)).
 
 (ref:caption-BMI-platelet-overview2) **Schematic of the associations explored: this chapter explores the relationship between body mass index and platelet function.** Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-overview2) Schematic of the associations explored in the current chapter
@@ -78,7 +67,7 @@ ACD (1:7) and apyrase (0.02 U/mL) were added  to PRP. PRP was centrifuged (1700 
 Citrated whole blood (200 uL) was analysed using the Sysmex XN-20 haematology analyser. Platelet readouts were platelet count (PLT) (x 10^9^/L), immature platelet fraction (IPF) (%), immature platelet count (IPC) (x 10^9^/L), side fluorescence (SFL, a measure of mRNA content in relative fluorescent units/RFUs), forward scatter (FSC, a measure of platelet size measured in RFUs) and side scatter (SSC, a measure of granularity in RFUs).
 
 ### Freeze-dried agonist plates
-Agonist was freeze dried onto plates to reduce day-to-day variation in agonist concentrations, as described previously [@Chan2018]. 96 well plates were coated with 10 mM PBS with 0.75% w/v hydrogenated gelatine and 0.05% v/v Tween-20 with a pH of 0.74 and left for 4 hours at room temperature. Plates were washed with dH~2~O with 0.01% v/v, followed by two washes with dH~2~O and left to dry in a fume hood. Agonist was added to the plates (5uL per well at 10x final concentration): agonists used were protease-activated receptor 1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen related peptide (CRP). Plates were then stored in a -80°C freezer for 1 hour, then placed into the freeze dryer (-50°C) and left overnight. Once freeze-dried, plates were vacuum packed.
+Agonist was freeze dried onto plates to reduce day-to-day variation in agonist concentrations, as described previously [@Chan2018]. 96 well plates were coated with 10 mM PBS with 0.75% w/v hydrogenated gelatine and 0.05% v/v Tween-20 with a pH of 0.74 and left for 4 hours at room temperature. Plates were washed with dH~2~O with 0.01% v/v Triton X-100, followed by two washes with dH~2~O and left to dry in a fume hood. Agonist was added to the plates (5uL per well at 10x final concentration): agonists used were protease-activated receptor 1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen related peptide (CRP). Plates were then stored in a -80°C freezer for 1 hour, then placed into the freeze dryer (-50°C) and left overnight. Once freeze-dried, plates were vacuum packed.
 
 ### Integrin α~IIb~β~3~ activation and P-selectin expression measured by flow cytometry
 Isolated PRP was diluted 1:40 in HEPES Tyrode's. FITC-conjugated PAC1 and PE-conjugated CD62P antibodies were added in a 2:1 ratio (5uL PAC1 and 2.5uL CD62P per well). This master mix was added to pre-prepared vacuum packed 96 well plates with freeze-dried agonist to a final folume of 50 uL. HEPES Tyrode's was also freeze-dried onto plates, which was used for a measurement of unstimulated integrin α~IIb~β~3~ activation and P-selectin expression. Platelets were stimulated with agonists for 10 minutes. Platelets were fixed with 1% paraformaldehyde (PFA) for 10 minutes. Platelets were gated and the median fluorescence intensity (MFI) in arbitrary units (AUs) was reported from a total of 10,000 events.
@@ -96,7 +85,7 @@ Platelet lysate samples (50 ug total protein) were digested with trypsin and lab
 Data was analysed using GraphPad Prism 8. All data points are presented where possible to be fully transparent. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are provided in figure legends. P-values for results are presented throughout, however these were not dichotomised as either 'significant' or 'not significant'[@Sterne2001] as the current study has low power and the groups are unlikely to be representative of the respective populations. A P-value threshold of 0.05 may therefore not be appropriate in this case.  
 
 ### Analysis of proteomic data
-A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal components, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log2 normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P-values were not adjusted for multiple testing, due to the observation that false discovery rate (FDR) adjustment may be too blunt in low power proteomics experiments[@Pascovici2016]. P-values of all comparisons are provided in the supplementary results in Chapter \@ref(BMI-platelets-clinic). (FDR) adjusted p-values are also provided in the full results as a reference. A positive logFC indicates an increase in protein level in the bariatric samples.
+A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal components, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log~2~ normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P-values were not adjusted for multiple testing, due to the observation that false discovery rate (FDR) adjustment may be too blunt in low power proteomics experiments[@Pascovici2016]. P-values of all comparisons are provided in the supplementary results in Chapter \@ref(BMI-platelets-clinic). (FDR) adjusted p-values are also provided in the full results as a reference. A positive logFC indicates an increase in protein level in the bariatric samples.
 
 ## Results
 
@@ -123,7 +112,7 @@ mytable %>% kable(caption = "(ref:caption-obesity-platelets-participants)", form
 
 ### Platelet parameters
 
-Platelet traits measured by Sysmex were compared across bariatric and control groups (Table \@ref(tab:obesity-platelets-parameters)). There was no statistical evidence for an effect of obesity on platelet parameters. However, IPC and IPF did display larger mean values compared to controls, but they also had relatively large SDs in the bariatric patient group (IPC 9.3 (SD 4.9) x 10^9^/L in control vs 16.3 (SD 16.3) x 10^9^/L in bariatric group, p=0.45).
+Platelet traits measured by Sysmex were compared across bariatric and control groups (Table \@ref(tab:obesity-platelets-parameters)). There was no statistical evidence for an effect of obesity on platelet parameters. However, IPC and IPF did display larger mean values compared to controls, but they also had relatively large SDs in the bariatric patient group (IPC 9.3 (SD 4.9) x 10^9^/L in control vs 16.3 (SD 16.3) x 10^9^/L in bariatric group, p=0.45). The bariatric patient group displayed larger standard deviations than the control group for all platelet paramaters. 
 
 \blandscape
 (ref:caption-obesity-platelets-parameters) **Comparison of platelet traits measured by Sysmex XE-2100 across bariatric and control groups**
@@ -145,7 +134,7 @@ mytable %>% kable(caption = "(ref:caption-obesity-platelets-parameters)", bookta
 \elandscape
 
 ### Basal receptors
-Activation of the integrin α~IIb~β~3~ and expression of P-selectin were compared across bariatric and control groups to see whether there was a difference in basal platelet activation. Basal integrin α~IIb~β~3~ activation and P-selectin expression were similar across groups (Figures \@ref(fig:basal-integrin-pselectin-receptor-bariatric)A and B). Expression of other platelet surface receptors in unstimulated platelets were also compared using specific antibodies. Levels of GPVI, CD42b (GP1bα), CD41 (integrin α~IIb~), CD61 (Integrin β~3~) and CD110 (thrombopoietin/TPO receptor) were not different across groups (Figure \@ref(fig:basal-integrin-pselectin-receptor-bariatric)C). 
+Activation of the integrin α~IIb~β~3~ and expression of P-selectin were compared across bariatric and control groups to investigate the effect of BMI on   basal platelet activation. Basal integrin α~IIb~β~3~ activation and P-selectin expression were similar across groups (Figures \@ref(fig:basal-integrin-pselectin-receptor-bariatric)A and B). Expression of other platelet surface receptors in unstimulated platelets were also compared using specific antibodies. Levels of GPVI, CD42b (GP1bα), CD41 (integrin α~IIb~), CD61 (Integrin β~3~) and CD110 (thrombopoietin/TPO receptor) were not different across groups (Figure \@ref(fig:basal-integrin-pselectin-receptor-bariatric)C). 
 
 (ref:scaption1) Comparison of basal integrin α~IIb~β~3~ activation, P-selectin expression and surface receptors levels across control and bariatric patient groups
 (ref:caption1) **Comparison of basal integrin α~IIb~β~3~ activation, P-selectin expression and surface receptors levels across control and bariatric patient groups.** Diluted PRP was used for experiments, where platelets were incubated with antibodies for 10 minutes before fixing. Bar graphs comparing A) Basal integrin α~IIb~β~3~ activation B) Basal  P-selectin expression and C) Basal surface receptor expression across bariatric patient and control groups. Antibodies were used to detect surface expression of GPVI, CD42b (GP1bα), CD41 (integrin α~IIb~), CD61 (Integrin β~3~) and CD110 (thrombopoietin/TPO receptor). N=4. P-values indicated for unpaired t-test results. Mean + SEM displayed.
@@ -158,7 +147,7 @@ include_graphics(path = "figure/Bariatric_study/Basal_surface_receptors.pdf", dp
 
 ### Agonist-induced integrin α~IIb~β~3~ activation and P-selectin expression
 
-Markers of platelet activation were compared in response to different platelet agonists. There was weak evidence that the integrin α~IIb~β~3~ maximum response was reduced in the bariatric patient group in response to PAR1-AP (2479 AU (SEM 126) in control vs 2105 AU (SEM 101) in bariatric group, p=0.06) and ADP (2526 AU (SEM 121) in control group vs 2274 AU (SEM 478), p=0.05), but there was no change in the pEC50s across groups. There was insufficient data to compare the pEC50s and max of the curves for CRP, however comparing the highest concentration of CRP, there was no difference in response across the bariatric and control group for activation of the integrin α~IIb~β~3~ (Figures \@ref(fig:agonist-integrin-pselectin)A-C). There was no difference in the levels of P-selectin across bariatric patients and control groups in response to PAR1-AP or ADP (Figures \@ref(fig:agonist-integrin-pselectin)D and E) as determined by the pEC50 or the curve maximum values. There was no evidence for a difference in expression of P-selectin across bariatric and control groups in response to the highest concentration of CRP ((Figure \@ref(fig:agonist-integrin-pselectin)F).
+Markers of platelet activation were compared in response to different platelet agonists. There was weak evidence that the integrin α~IIb~β~3~ maximum response was reduced in the bariatric patient group in response to PAR1-AP (2479 AU (SEM 126) in control vs 2105 AU (SEM 101) in bariatric group, p=0.06) and ADP (2526 AU (SEM 121) in control group vs 2274 AU (SEM 478), p=0.05), but there was no change in the pEC50s across groups (Figure \@ref(fig:agonist-integrin-pselectin)). There was insufficient data to compare the pEC50s and max of the curves for CRP, however comparing the highest concentration of CRP, there was no difference in response across the bariatric and control group for activation of the integrin α~IIb~β~3~ (Figures \@ref(fig:agonist-integrin-pselectin)A-C). There was no difference in the levels of P-selectin across bariatric patients and control groups in response to PAR1-AP or ADP (Figures \@ref(fig:agonist-integrin-pselectin)D and E) as determined by the pEC50 or the curve maximum values. There was no evidence for a difference in expression of P-selectin across bariatric and control groups in response to the highest concentration of CRP (Figure \@ref(fig:agonist-integrin-pselectin)F).
 
 (ref:scaption2) Concentration-response curves of integrin α~IIb~β~3~ activation and P-selectin expression for bariatric patient and control groups
 (ref:caption2) **Concentration-response curves of integrin α~IIb~β~3~ activation and P-selectin expression for bariatric patient and control groups** in platelet rich plasma diluted in HEPES-Tyrode's. Integrin α~IIb~β~3~ activation in response to A) PAR1-AP, B) ADP and C) CRP. P-selectin expression in response to D) PAR1-AP, E) ADP, F) CRP. N=4. Mean ± SEM displayed. P values are the comparison of either the pEC50 or the maximum of the curve for the individual concentration-response curves across the bariatric patient and control groups. For CRP, the p value for an unpaired two-tailed t-test comparing the response to 1x10^-5^ g/mL CRP across the bariatric patient and control groups is displayed.
@@ -170,7 +159,7 @@ include_graphics(path = "figure/Bariatric_study/Agonist_Integrin_Pselectin.pdf",
 
 ### Platelet-neutrophil aggregates
 
-Next, platelet-neutrophil interactions were explored to determine whether there was a difference in the proportion of neutrophils that are bound to platelets, therefore demonstrative of a difference in hyperactive platelets. This was explored by gating neutrophils using an antibody for the specific neutrophil marker, CD45, and their side scatter (granularity). Within this gate, the percentage of neutrophils interacting with platelets was determined by using an antibody for the platelet specific marker CD41 (integrin α~IIb~ subunit) and determining the percentage of events that were both CD45+ and CD41+. There was no difference in the percentage of neutrophils bound to platelets under basal conditions (7.0 % (SEM 1.5 %) in control v 11.2 % (SEM 3.2%) in bariatric patient group, p=0.30). Similarly, after stimulation with CRP, there was no difference in the percentage of neutrophil-platelet aggregates (38.6 % (SEM 2.6 %) in control group v 35.5 % (SEM 2.7 %), p=0.48).  
+Platelets also are important in the inflammatory response, where they interact with other key innate immune system cells such as neutrophils. Platelets can bind to neutrophils through the P-selectin receptor. Platelet-neutrophil interactions were explored across groups to determine whether there was a difference in the proportion of neutrophils that are bound to platelets, therefore demonstrative of a difference in hyperactive platelets. This was explored by gating neutrophils using an antibody for the specific neutrophil marker, CD45, and their side scatter (granularity). Within this gate, the percentage of neutrophils interacting with platelets was determined by using an antibody for the platelet specific marker CD41 (integrin α~IIb~ subunit) and determining the percentage of events that were both CD45+ and CD41+. There was no difference in the percentage of neutrophils bound to platelets under basal conditions (7.0 % (SEM 1.5 %) in control v 11.2 % (SEM 3.2%) in bariatric patient group, p=0.30). Similarly, after stimulation with CRP, there was no difference in the percentage of neutrophil-platelet aggregates (38.6 % (SEM 2.6 %) in control group v 35.5 % (SEM 2.7 %), p=0.48).  
 
 (ref:scaption2b) Comparison of neutrophil-platelet aggregates across bariatric and control groups.
 (ref:caption2b) **Comparison of neutrophil-platelet aggregates across bariatric and control groups.** Neutrophil-platelet aggregates were determined using CD45 and CD41 antibodies. Aggregates were compared across bariatric patient and control participant groups in unstimulated and stimulated (5 ug/mL CRP) conditions. N=4. P-values provided for the results of a two-way ANOVA with Sidak's multiple comparisons tests. Mean + SEM displayed.
@@ -182,7 +171,7 @@ include_graphics(path = "figure/Bariatric_study/Plt-neu_aggregates.pdf", dpi = N
 
 ### Platelet proteomics
 
-A total of 5318 proteins were detected from platelets of both groups of participants by tandem mass tag mass spectrometry (TMT-MS). A principal component analysis (PCA) was performed on the protein data. PC1 and PC2 explained 27.1 % and 14.4 % of the variance in the data, respectively. A PC plot of PC1 against PC2 is shown in Figure \@ref(fig:pca). PC1 plotted against PC2 did not separate the bariatric patient samples from the control participant samples, despite grouping of three patients (Figure \@ref(fig:pca)). PC3 and PC4 explained 13.1% and 12.6% of the data respectively. When plotting PC3 against PC4, there is separation among the groups (Figure \@ref(fig:pca2)). This suggests that the group was not the main source of variation between the data. 
+The platelet proteome holds important information about platelet signalling. Differential expression of proteins across bariatric patients and controls was therefore explored. A total of 5318 proteins were detected from platelets of both groups of participants by tandem mass tag mass spectrometry (TMT-MS). A principal component analysis (PCA) was performed on the protein data. PC1 and PC2 explained 27.1 % and 14.4 % of the variance in the data, respectively. A PC plot of PC1 against PC2 is shown in Figure \@ref(fig:pca). PC1 plotted against PC2 did not separate the bariatric patient samples from the control participant samples, despite grouping of three patients (Figure \@ref(fig:pca)). PC3 and PC4 explained 13.1% and 12.6% of the data respectively. When plotting PC3 against PC4, there is separation among the groups (Figure \@ref(fig:pca2)). This suggests that the group was not the main source of variation between the data. 
 
 (ref:scaption-pca) Principal component analysis (PCA): scatter plot of PC1 and PC2
 (ref:caption-pca) **Principal component analysis (PCA): scatter plot of PC1 and PC2.** Each point represents a participant. Control samples are coloured red and bariatric samples coloured blue, with the pooled reference sample of both control and bariatric samples coloured in blue.
@@ -213,7 +202,7 @@ include_graphics(path = "figure/Bariatric_study/volcano_proteomics_labelled.pdf"
 
 This chapter explored the effect of obesity on platelet parameters and platelet function by collecting pre-surgery samples from bariatric patients and age and sex-matched controls. Here, I have optimised common experimental laboratory techniques for use within a patient study. In addition, these techniques have also been used to study platelet function within another patient group (COVID-19) and can be implemented in future patient studies. The present study did not detect functional differences in platelet parameters and between bariatric patients compared to healthy controls, but proteomics analysis by TMT-MS detected differences in platelet protein abundance, which may have implications for platelet signalling. 
 
-This study did not detect differences in platelet characteristics such as IPC when comparing the high BMI bariatric surgery group with the control group. The small sample size and large standard deviation in the high BMI group would explain why the BMI and IPC association detected in Chapter \@ref(BMI-platelets-INTERVAL) was not detected in the current study. There was also no evidence for a difference in levels of platelet receptors under basal conditions. A difference in P-selectin expression in response to agonists across the bariatric patient and control group was not detected, however, there was weak evidence that activation of the integrin α~IIb~β~3~ was impaired in the bariatric patient group. This reduction is modest so it is unclear whether this would impact the ability of platelets to aggregate. A previous study (unpublished) from the Hers group and published data from other groups[@Taus2020] indicated that in severe COVID-19 there is a large reduction (~60% reduction) in platelet integrin α~IIb~β~3~ activation, but an increase in the percentage of platelets bound to neutrophils therefore suggesting there is hyperactivity. It is therefore possible that impaired integrin activation may be a marker of platelet hyperactivity. A similar reduction in integrin α~IIb~β~3~ activation was reported in platelets from patients with myeloproliferative disorders who also have a prothrombotic phenotype[@Moore2013]. Despite this, in the current study there was no difference in the percentage of neutrophils bound to platelets in the bariatric surgery group. This may be because the reduction in integrin α~IIb~β~3~ activation was not large enough (it was only ~10% reduction in the bariatric surgery group in response to ADP).
+This study did not detect differences in platelet characteristics such as IPC when comparing the high BMI bariatric surgery group with the control group. The small sample size and large standard deviation in the high BMI group would explain why the BMI and IPC association detected in Chapter \@ref(BMI-platelets-INTERVAL) was not detected in the current study. There was also no evidence for a difference in levels of platelet receptors under basal conditions. A difference in P-selectin expression in response to agonists across the bariatric patient and control group was not detected, however, there was weak evidence that activation of the integrin α~IIb~β~3~ was impaired in the bariatric patient group. This reduction is modest so it is unclear whether this would impact the ability of platelets to aggregate. A previous study (unpublished) from the Hers group and published data from other groups[@Taus2020] indicated that in severe COVID-19 there is a large reduction (~60% reduction) in platelet integrin α~IIb~β~3~ activation, but an increase in the percentage of platelets bound to neutrophils therefore suggesting there is hyperactivity. It is therefore possible that impaired integrin activation may be a marker of platelet hyperactivity. A similar reduction in integrin α~IIb~β~3~ activation was reported in platelets from patients with myeloproliferative disorders who also have a prothrombotic phenotype[@Moore2013]. In the current study there a small reduction in integrin α~IIb~β~3~ activation (~10% reduction in the bariatric surgery group in response to ADP). Replication in a larger sample size is important to further characterise differences integrin α~IIb~β~3~ activation.
 
 One previous study detected an increase in GPVI receptor levels and GPVI mediated platelet aggregation[@Barrachina2019]. Despite this previous finding, Barrachina et al. did not directly measure activation of the integrin α~IIb~β~3~, so it is unclear how this increase in expression would translate to the activation of this integrin. A larger sample size would be required to be able to draw conclusions here. As well as this, aggregation experiments would have also been useful to compare platelet function across groups, however this technique was not chosen due to time restraints and large amount of sample required.
 
