--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -156,7 +156,7 @@ column_spec(1, width = "4cm")   %>%
   landscape()
 ```
 
-(ref:caption-QQ-confounder-proteins) **Q-Q plots for the expected against observed -log~10~(pvalues) for associations of age (A), sex (B), smoking (C) and alcohol (D) with protein traits**
+(ref:caption-QQ-confounder-proteins) **Q-Q plots for the expected against observed -log~10~(pvalues) for associations of age (A), sex (B), smoking (C) and alcohol (D) with protein traits**. The red line indicates where the expected vs observed p-values are equal. Each blue dot represents the expected vs observed p-value for each protein.
 (ref:scaption-QQ-confounder-proteins) Q-Q plots of the expected against observed -log~10~(pvalues) for the associations between covariables and protein traits
 ```{r QQ-confounder-proteins, echo = FALSE, out.width = "95%", fig.cap="(ref:caption-QQ-confounder-proteins)", fig.align = "center", fig.scap="(ref:scaption-QQ-confounder-proteins)"}
 include_graphics(path = "figure/BMI_protein_INTERVAL/QQ_confounder_proteins.pdf", dpi = NA)
@@ -320,7 +320,7 @@ For proteins with stronger MR derived association evidence, it is important to e
 
 Our results help to provide contextualisation for proteins which have already been implicated in disease. For example, results suggest a strong positive effect of BMI on FABP4, an adipokine found primarily in adipocytes and macrophages[@Furuhashi2014]. This MR estimate supports the association which has been suggested in previous observational studies[@Xu2006]. FABP4 has been implicated in cardiometabolic disease: a SNP which increases FABP4 was found to raise the odds of type II diabetes among adults[@Gudmundsdottir2020], potentially through its contribution to higher insulin resistance[@Nakamura2017]. FABP4 has also been associated with higher risk of atherosclerosis among adults[@Yeung2007]. A strong SHBG-lowering effect of higher BMI was also suggested here. The SHBG molecule is a glycoprotein which binds androgens and oestrogens and suppresses their activity[@Wallace2013]; a reduction in SHBG is therefore expected to lead to higher levels of circulating sex hormones. The negative effect of BMI on SHBG seen here supports observational findings[@Cooper2015; @Goto2014; @Baglietto2009]. When evaluating the role of SHBG in disease, MR analysis suggests that an increase in SHBG contributes to a decrease in risk of cardioembolic stroke[@Zheng2020]. Other studies have also implicated lower SHBG levels in increasing type II diabetes risk [@Ritchie2019]. The exact mechanisms leading from decreased SBHG to ill-health is unclear, but may arise as a result of the increased bioavailability of testosterone and oestrogen[@Wallace2013].
 
-There were also a range of platelet proteins which were detected in the plasma (262 proteins). These are proteins which have been linked to platelet GO pathways. The observational analysis detected an inverse association between BMI and platelet proteins, including PAFAH and PEAR1. These estimates were similar in the MR analysis, however the estimates did not pass multiple testing adjustment. Interestingly, higher BMI led to a decrease in levels of these proteins circulating in the plasma. PAFAH is a phospholipase A~2~ enzyme [@Marathe2018]. PAFAH binds to lipoproteins and can degrade platelet activating factor (PAF). PAFAH has been shown to bind to lipoproteins in mice[@Noto2003] and is thought to therefore reduce lipoprotein oxidation, thereby being antiatherogenic. The reduction in PAFAH that was associated with higher BMI could therefore be atherogenic. It is unclear why higher BMI would lead to a reduction in other proteins such as PEAR1. PEAR1 is a transmembrane protein involved in megakaryopoiesis and platelet activation, where it plays a key role in stabilising the integrin α~IIb~β~3~[@Kauskot2012]. Lower circulating levels of PEAR1 in participants with higher BMI could be explained by PEAR1 levels being retained more within the platelet (and therefore could lead to platelet hyperactivity). Although alterations in plasma proteins may help understanding of the environment platelets are in, it would be informative to explore the platelet proteome in a cohort as large as INTERVAL, however the material is not available for this analysis. 
+There were also a range of platelet proteins which were detected in the plasma (262 proteins). These are proteins which have been linked to platelet GO pathways. The observational analysis detected an inverse association between BMI and platelet proteins, including PAFAH and PEAR1. These estimates were similar in the MR analysis, however the estimates did not pass multiple testing adjustment. Interestingly, higher BMI led to a decrease in levels of these proteins circulating in the plasma. PAFAH is a phospholipase A~2~ enzyme [@Marathe2018]. PAFAH binds to lipoproteins and can degrade platelet activating factor (PAF). The degradation of PAF leads to a reduction in aggregation. PAFAH has been shown to bind to lipoproteins in mice[@Noto2003] and is thought to therefore reduce lipoprotein oxidation, thereby being antiatherogenic. The reduction in PAFAH that was associated with higher BMI could therefore be atherogenic. It is unclear why higher BMI would lead to a reduction in other proteins such as PEAR1. PEAR1 is a transmembrane protein involved in megakaryopoiesis and platelet activation, where it plays a key role in stabilising integrin α~IIb~β~3~[@Kauskot2012]. Lower circulating levels of PEAR1 in participants with higher BMI could be explained by PEAR1 levels being retained more within the platelet (and therefore could lead to platelet hyperactivity). Although alterations in plasma proteins may help understanding of the environment platelets are in, it would be informative to explore the platelet proteome in a cohort as large as INTERVAL, however the material is not available for this analysis. 
 
 The involvement of the chemokines MDC and TARC in platelet function was presented in Chapter \@ref(chemokine-platelets), where there was evidence that they can modulate platelet activation. There was also MR evidence that higher levels of MDC could contribute towards VTE pathophysiology. These chemokines were also included in the SomaLogic panel in the current chapter, therefore the effect of BMI on the circulating levels of these chemokines was explored. MDC was associated with BMI observationally, and the magnitude of effect was similar in the MR, however this estimate did not withstand multiple testing adjustment. It is possible that MDC could be an intermediate in between BMI and platelet function, however this analysis needs to be replicated in a larger cohort. There was no evidence to support TARC as an intermediate. Differences in regulation of MDC and TARC need to be further elucidated.
 
