--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -31,8 +31,8 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 ```
 # Discussion {#Discussion}
 
-## Overall findings
-The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related cardiovascular disease (Figure \@ref(fig:Thesis-schematic-chaps)). The results and limitations from each individual results chapter have been discussed in the relevant chapters. This overall discussion chapter will recap the main findings from the thesis, address the overall strengths and limitations, discuss the wider clinical implications of findings as well as suggest future research to expand this area of research.
+## Summary of findings
+The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related cardiovascular disease (Figure \@ref(fig:Thesis-schematic-chaps)). The results and limitations from each individual results chapter have been discussed in the relevant chapters. This discussion chapter will recap the main findings from the thesis, address the overall strengths and limitations, discuss the wider clinical implications of findings as well as suggest future research to expand on this area of research.
 
 (ref:caption-Thesis-schematic-chaps) **Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored.** Figure made using BioRender.com.
 (ref:scaption-Thesis-schematic-chaps) Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored
@@ -40,13 +40,13 @@ The work presented in this thesis brought together an interdisciplinary approach
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
 ```
 
-A summary of the main findings of the thesis is provided in Table \@ref(tab:main-thesis-findings). This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the plasma proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins.
+A summary of the main findings of the thesis is provided in Table \@ref(tab:main-thesis-findings). This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the platelet proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related cardiovascular disease such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on plasma proteins involved in platelet proteins also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
 
 (ref:caption-main-thesis-findings) Summary of main findings from the thesis
 ```{r main-thesis-findings,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 Chapter = c('Chapter 3', 'Chapter 4', 'Chapter 5', 'Chapter 6', 'Chapter 7', 'Chapter 8')
-findings = c("Higher body mass index (BMI) leads to higher immature platelet count (IPC) in a Mendelian randomization framework (INTERVAL). Within a cardiac surgery cohort (COPTIC), immature platelet count was positively associated with whole blood platelet aggregation.","Laboratory experiments were optimised to assess platelet function from patients. In the clinical pilot study, the effect of high BMI on platelet function was inconclusive, but there was evidence for a difference in levels of platelet proteins across BMI groups.", "This study provided evidence that the chemokines MDC and TARC can potentiate PAR1-AP induced platelet function. The chemokines were also found to be able to activate platelets when applied alone. It is likely that these effects are through the CCR4 receptor which is likely to be G~q~ coupled. A two sample Mendelian randomization analysis implicated higher levels of MDC in deep vein thrombosis and pulmonary embolism.", "Higher BMI has a causal effect on levels of proteins which circulate in the plasma. Proteins most altered by BMI were enriched for cardiovascular disease, metabolic disease and renal disease.", "Weight loss as a result of caloric restriction has a substantial effect on the plasma proteome, with changes enriched for metabolic disease and renal disease.", "Proteins altered by higher BMI in Chapter 6 can be reversed with weight loss in Chapter 7.")
+findings = c("Higher body mass index (BMI) leads to higher immature platelet count (IPC) in a Mendelian randomization framework (INTERVAL). Within a cardiac surgery cohort (COPTIC), immature platelet count was positively associated with whole blood platelet aggregation.","Laboratory experiments were optimised to assess platelet function from patients. In the clinical pilot study, the effect of high BMI on platelet function was inconclusive, but there was evidence for a difference in levels of platelet proteins across BMI groups.", "This study provided evidence that the chemokines MDC and TARC can potentiate PAR1-AP induced platelet function. The chemokines were also found to be able to activate platelets when applied alone. A two sample Mendelian randomization analysis implicated higher levels of MDC in deep vein thrombosis and pulmonary embolism.", "Higher BMI has a causal effect on levels of proteins which circulate in the plasma. Proteins most altered by BMI were enriched for cardiovascular disease, metabolic disease and renal disease.", "Weight loss as a result of caloric restriction has a substantial effect on the plasma proteome, with changes enriched for metabolic disease and renal disease.", "Proteins altered by higher BMI in Chapter 6 can be reversed with weight loss in Chapter 7.")
 mytable = cbind(Chapter, findings)
 colnames(mytable) <- c("Chapter", "Main findings")
 mytable %>% kable(caption = "(ref:caption-main-thesis-findings)", booktabs = TRUE, format="latex") %>% 
@@ -62,34 +62,37 @@ column_spec(2, width = "12cm") %>%
 As previously mentioned, this thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. This is therefore a strength of the current research. One of the major benefits of these techniques are that they are in line with the principles of the 3Rs (replacement, reduction and refinement). The thesis has made use of available human data from various cohorts to avoid use of animals in research (replacement).
 
 ## Limitations
-The associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps) were explored where there was available data or where it was possible to address hypotheses with specifically designed basic science experiments. Certain analyses were limited by the availability of data. For example, it would have been beneficial to have platelet function measured within the INTERVAL cohort as this would have made it possible to do a one sample MR for BMI to platelet function, and the plasma proteome findings could have been directly compared to platelet function. Although platelet function data is not available on this scale, cohorts such as the Framingham Heart Study (FHS) have platelet function data for ~3,000 participants[@Rodriguez2020]. As they also have genetic data, it would be beneficial to perform a one sample MR for BMI to platelet function. The association between IPC and platelet function would benefit from being replicated in a larger cohort who are free from major disease such as the FHS, however this study does not have IPC measured.
 
-As mentioned in Chapter \@ref(BMI-platelets-clinic), a major limitation is the lack of longitudinal data for the bariatric surgery and platelet function study. Before the COVID-19 pandemic, the plan was to have bariatric patients with BMI > 40 kg/m^2^ and controls followed up at four time points. These time points were: baseline (2-3 weeks before surgery), after the very low energy diet (VLED) that precedes bariatric surgery (day of surgery), 6 weeks post-surgery and 12 months post-surgery. This would have allowed exploration of the change in an individual's platelet function with weight loss. Previous studies have researched the effect of obesity and bariatric surgery on platelet function[@Barrachina2019; @Dobrydneva2012], but platelet function at four timepoints surrounding bariatric surgery has not yet been explored, more specifically before and after the VLED. This study aimed to add in a time point at 12 months, which is where there is evidence for maximal weight loss[@Maciejewski2016]. Therefore this study would have been one of the most in depth platelet function studies for bariatric surgery. 
+Although efforts were made to examine all of the associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps), this was only possible where there was available data or where it was possible to address hypotheses with specifically designed clinical or basic science experiments. Certain analyses were therefore limited by the availability of data. For example, it would have been beneficial to have platelet function measured within the INTERVAL cohort as this would have made it possible to do a one sample MR for BMI to platelet function, and the plasma proteome findings could have been directly compared to platelet function. Although platelet function data is not available on this scale, cohorts such as the Framingham Heart Study (FHS) have platelet function data for ~3,000 participants[@Rodriguez2020]. As they also have genetic data, it would be beneficial to perform a one sample MR for BMI to platelet function. The association between IPC and platelet function would benefit from being replicated in a larger cohort who are free from major disease such as the FHS, however this study does not have IPC measured.
 
-Another limitation of the thesis is that there was no stratification by sex in analyses. Analyses did adjust for sex and therefore should help to reduce the confounding effect from this variable, however there may be a need to explore whether there are any sex specific effects. It is possible that BMI has different effects on the plasma proteome in males and females. Previous studies have identified sex differences in inflammatory protein changes in individuals with and without metabolic syndrome, for example adiponectin[@TerHorst2020]. A difference in platelet reactivity between males and females has also been reported, where aggregation in response to a range of platelet agonists was is greater in females[@Becker2006]. Future analyses would benefit from stratifying analyses by sex to further investigate this, however larger sample sizes would be required.
+As mentioned in Chapter \@ref(BMI-platelets-clinic), a major limitation is the lack of longitudinal data for the bariatric surgery and platelet function study. Before the COVID-19 pandemic, the experimental plan was to have bariatric patients with BMI > 40 kg/m^2^ and controls followed up at four time points. These time points were: baseline (2-3 weeks before surgery), after the very low energy diet (VLED) that precedes bariatric surgery (day of surgery), 6 weeks post-surgery and 12 months post-surgery. This would have allowed exploration of the change in an individual's platelet function with weight loss. Previous studies have researched the effect of obesity and bariatric surgery on platelet function[@Barrachina2019; @Dobrydneva2012], but platelet function at four timepoints surrounding bariatric surgery has not yet been explored, more specifically before and after the VLED. This study aimed to add in a time point at 12 months, which is where there is evidence for maximal weight loss[@Maciejewski2016]. Therefore this study would have been one of the most in depth platelet function studies for bariatric surgery. Although now not achievable within this PhD project, this study will be able to be taken forward by the Hers lab.
+
+Another limitation of the thesis is that there was no stratification by sex in analyses and lab experiments. Where possible, analyses were adjusted for sex and therefore should help to reduce the confounding effect from this variable, however there may be a need to explore whether there are any sex specific effects. It is possible that BMI has different effects on the plasma proteome in males and females. Previous studies have identified sex differences in inflammatory protein changes in individuals with and without metabolic syndrome, for example adiponectin[@TerHorst2020]. A difference in platelet reactivity between males and females has also been reported, where aggregation in response to a range of platelet agonists was is greater in females[@Becker2006]. Similarly, it has been observed within the Hers lab that females may have platelets which are more susceptible to the priming effects by chemokines and other priming molecules. Future analyses would benefit from stratifying analyses by sex to further investigate any sex-specific effects, however larger sample sizes would be required.
 
 ## Wider implications of findings
-The research has contributed to the understanding of mechanisms of obesity-related cardiovascular disease. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC. Similarly, some more detailed blood counts from newer haematology analyzers do not provide IPC within the summary, however this can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to antiplatelet treatment[@Bernlochner2015a].
+The research within this thesis has contributed to the understanding of mechanisms of obesity-related cardiovascular disease. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC.  Similarly, more detailed blood counts from newer haematology analyzers also do not provide IPC within the summary, however it can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to antiplatelet treatment[@Bernlochner2015a].
 
-As well as IPC having the potential to be a useful biomarker, various plasma proteins could also be biomarkers for patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter \@ref(BMI-protein-MR) have been implicated in disease. For example, in work by Constantinescu et al., their analysis suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC (Reference Andrei's paper). Proteins such as INHBC could therefore be therapeutic targets. These proteins could also be potential biomarkers. 
+As well as IPC having the potential to be a useful biomarker, various plasma proteins could also be biomarkers for patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter \@ref(BMI-protein-MR) have been implicated in disease. For example, in work by Constantinescu et al., analyses suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC (Reference Andrei's paper). Proteins such as INHBC could therefore be therapeutic targets. These proteins could also be potential biomarkers. 
  
 ## Future studies
 Based on the findings of the research, there have been more questions which have been raised and would require further research. These will be discussed in the following paragraphs.
 
-The MR in Chapter \@ref(BMI-platelets-INTERVAL) provided causal evidence for higher BMI raising IPC. There was also a positive association between BMI and IPC within the cardiac surgery cohort and although the magnitude of estimate was the same, this effect was weak, therefore this is potentially attributable to the modest sample size. It would be beneficial to validate this association within an independent cohort, such as UK Biobank. It would be useful to link IPC to medical records to be able to look at whether IPC is a predictor of cardiovascular events such as myocardial infarction or stroke. Mendelian randomization could also be implemented to look at the causal effect of IPC on cardiovascular outcomes. Once summary statistics become available for a GWAS of platelet function, with more participants, it would also be beneficial to do an MR analysis to explore the causal role of IPC in platelet function.
+The MR in Chapter \@ref(BMI-platelets-INTERVAL) provided MR evidence for a causal relationship between BMI and IPC. There was also a positive association between BMI and IPC within the cardiac surgery cohort and, although the magnitude of estimate was the same, this effect was weak, therefore this is potentially attributable to the modest sample size. It would be beneficial to validate this association within an independent cohort, such as UK Biobank. It would be useful to link IPC to medical records to be able to look at whether IPC is a predictor of cardiovascular events such as myocardial infarction or stroke. Mendelian randomization could also be implemented to look at the causal effect of IPC on cardiovascular outcomes. Once summary statistics become available for a GWAS of platelet function with a larger sample size, it would also be beneficial to do an MR analysis to explore the causal role of IPC in platelet function.
 
-Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other bariatric cohorts such as the Stratification of Obese PHenotypes to optimize future obesity therapy (SOPHIA) study which would likely have the relevant full blood count data to perform these analyses. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets[@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs)[@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as neutrophils or platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomization could be performed to identify how this could affect cardiovascular outcomes. However, this would be labour intensive.
+Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other bariatric cohorts such as the Stratification of Obese PHenotypes to optimize future obesity therapy (SOPHIA) study which would likely have the relevant full blood count data to perform these analyses. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets[@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs)[@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomization could be performed to identify how this could affect cardiovascular outcomes. However, this would be labour intensive.
 
 Analyses explored both the platelet proteome and the plasma proteome in relation to body mass index. The effect of obesity on microparticles released from platelets activated by thrombin has also been explored[@Grande2019]. A systematic comparison across these three proteomes could reveal how these proteomes relate to each other. For example, it could be possible to see whether specific proteins are affected in the same way in both platelets and plasma, or if there is a reciprocal relationship. Initial analyses on platelet proteomic data from patients with COVID-19 have identified that many plasma COVID-19 biomarkers are also altered in platelets (unpublished data from the Hers group). This may also be the case for other diseases such as MI/DVT and therefore requires further exploration. 
 
-The MR analysis in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. There was also MR evidence that higher BMI raises IPC. Exploring the possibility of a bidirectional effect for both of these analysis would be important as it cannot be ruled out that certain proteins could be involved in processes involved in weight regulation. It is unlikely that IPC would have a causal effect on BMI, however this would also need to be confirmed by use of a two sample MR. The possible effect of plasma proteins on IPC could also be explored using a two sample MR, using summary statistics for their respective GWAS. Another way to address the effects of proteins on IPC and platelet function could be to apply proteins such as fumarylacetoacetase, SHBG and leptin to megakaryocytes and to see whether there are changes in production of platelets compared to control. Proteins could also be applied in platelet aggregation experiments or _in vitro_ thrombosis to see whether these cause platelet hyperactivity.
+The MR analysis in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. There was also MR evidence that higher BMI raises IPC. Exploring the possibility of a bidirectional effect for both of these analysis would be important as it cannot be ruled out that certain proteins could be involved in processes involved in weight regulation, such as with PAFAH. It is unlikely that IPC would have a causal effect on BMI, however this would also need to be confirmed by use of a two sample MR. The possible effect of plasma proteins on IPC could also be explored using a two sample MR, using summary statistics for their respective GWAS. Another way to address the effects of proteins on IPC and platelet function could be to apply proteins such as fumarylacetoacetase, SHBG and leptin to megakaryocytes and to see whether there are changes in production of platelets compared to control. Proteins could also be applied in platelet aggregation experiments or _in vitro_ thrombosis to see whether these cause platelet hyperactivity.
 
-Exploring individual proteins is useful in understanding disease risk, however further work on protein profiles is required as it is more likely a change in various proteins mediates the risk. Techniques to explore profiles are not well developed, however there are a few approaches which could be implemented. One such technique would be network MR, to be able to identify the relationship between proteins altered by BMI. This could help reveal whether there are any cascade effects, where an alteration in one protein may lead to downstream changes in other proteins and as such be at the top of the cascade. Another technique to begin unpicking profile effects could be exploring the effect of BMI on ratios between proteins. This technique has been used for metabolites, for example a single measure of the ratio between monounsaturated fats to polyunsaturated fats circulating in the blood is used[@Carayol2017c]. It is unclear whether this technique would be suitable for proteomics data, and if it is, which protein ratios would be biologically meaningful to express as a ratio. 
+Exploring individual proteins is useful in understanding disease risk, however further work on protein profiles is required as it is more likely a change in various proteins mediates the risk. Techniques to explore profiles are not well developed, however there are a few approaches which could be implemented. One such technique would be network MR, to be able to identify the relationship between proteins altered by BMI. This could help reveal whether there are any cascade effects, where an alteration in one protein may lead to downstream changes in other proteins and as such be at the top of the cascade. Another technique to begin unpicking profile effects could be exploring the effect of BMI on ratios between proteins. This technique has been used for metabolites, for example a single measure of the ratio between monounsaturated fats to polyunsaturated fats circulating in the blood is used[@Carayol2017c]. It is unclear whether this technique would be suitable for proteomics data, and if it is, which proteins would be biologically meaningful to express as a ratio. 
 
-Methods to assess the effect of BMI on proteins have used linear methods. Linear MR is commonly used, however this may not always be the most appropriate method as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship[@Sun2019]. Nonlinearity has been observed for other associations, for example with vitamin D deficiency and CVD risk[@Zhou2021]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the "nlmr" R package stratify estimates based on quantiles. As a result of this, the user cannot define their bounds of their strata and therefore makes it difficult to interpret results. The "glsmr" package was therefore developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail and implementation of these packages is provided in Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. A limitation of this approach is that stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^), there are fewer participants and therefore causing the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. More recently, SomaLogic proteomic analysis has been performed om plasma samples from nearly 40,000 Icelanders[@Ferkingstad2021]. Studies of this scale would help with stratifying into groups while maintaining power. Other studies such as the Qatar Biobank have higher rates of obesity than other cohorts, where 39% have obesity and the mean BMI is 29 kg/m^2^[@AlKuwari2015]. Studies such as this would be more suitable for nonlinear analyses.
+Linear MR is commonly used, however this may not always be the most appropriate method as there are often non-linear relationships, for example between BMI and mortality, where there is a J-shaped relationship[@Sun2019]. Non-linearity has been observed for other associations, for example with vitamin D deficiency and CVD risk[@Zhou2021]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for non-linearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the "nlmr" R package stratify estimates based on quantiles. As a result of this, the user cannot define their bounds of their strata and therefore makes it difficult to interpret results. The "glsmr" package was therefore developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail and implementation of these packages is provided in Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. This analysis points towards a non-linear relationship between BMI and leptin. Preliminary analyses indicate that there are non-linear relationships with other proteins such as GHR and IGFBPs, where levels plateau after around 30-35kg/m^2^. These non-linear relationships may indicate that a certain threshold needs to be achieved with weight loss to achieve a more favourable protein profile. This could have implications for disease risk reduction.
+A limitation of this approach is that stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^), there are fewer participants and therefore causing the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. More recently, SomaLogic proteomic analysis has been performed om plasma samples from nearly 40,000 Icelanders[@Ferkingstad2021]. Studies of this scale would help with stratifying into groups while maintaining power. Other studies such as the Qatar Biobank have higher rates of obesity than other cohorts, where 39% have obesity and the mean BMI is 29 kg/m^2^[@AlKuwari2015]. Studies such as this would be more suitable for non-linear analyses.
 
-The analyses in Chapter \@ref(BMI-protein-RCT) utilise an RCT implementing caloric restriction to explore the effect of weight loss on the plasma proteome. As mentioned briefly within the limitations section of that chapter, the reduction in BMI was modest, so the majority of participants will still have obesity even 1 year after the intervention. It is also likely that this weight loss would not be sustainable long term. Therefore it may be difficult to determine the effects of reducing adiposity. Bariatric surgery is another intervention which typically causes a greater reduction in BMI. A previous study in adolescents indicated that a gastric bypass and sleeve gastrectomy resulted in a 3-year BMI reduction of 15 kg/m^2^, around 30% reduction of baseline BMI[@Inge2016]. This drastic change in BMI would likely have a substantial effect on the plasma proteome. Previous studies have explored this and I plan to utilise some pilot data from the bariatric surgery trial, where serum samples have been analysed by the new Olink Explore 1536 panel. This will provide estimates for the effect of bariatric surgery-induced weight loss on the serum proteome. These estimate can be compared alongside the estimates presented in Chapter \@ref(Comparison-proteome).
+The analyses in Chapter \@ref(BMI-protein-RCT) utilised an RCT implementing caloric restriction to explore the effect of weight loss on the plasma proteome. As mentioned briefly within the limitations section of that chapter, the reduction in BMI was modest, so the majority of participants will still have obesity even 1 year after the intervention. It is also likely that this weight loss would not be sustainable long term. Therefore it may be difficult to determine the effects of reducing adiposity. Bariatric surgery is another intervention which typically causes a greater reduction in BMI. A previous study in adolescents indicated that a gastric bypass and sleeve gastrectomy resulted in a 3-year BMI reduction of 15 kg/m^2^, around 30% reduction of baseline BMI[@Inge2016]. This drastic change in BMI would likely have a substantial effect on the plasma proteome. Previous studies have explored this and I plan to utilise some pilot data from the bariatric surgery trial, where serum samples from before and after surgery have been analysed by the new Olink Explore 1536 panel. This will provide estimates for the effect of bariatric surgery-induced weight loss on the serum proteome. These estimate can be compared alongside the estimates presented in Chapter \@ref(Comparison-proteome), where there is protein overlap.
 
 ## Overall conclusion
 
-Overall
+Overall, this thesis has brought together a range of techniques to investigate the contribution of platelet function and the plasma proteome as possible mechanisms of obesity-related cardiovascular disease. There was evidence for a causal relationship between body mass index and IPC: the clinical utility of IPC as a biomarker of platelet reactivity needs to be further characterised. In order to explore potential mechanisms of effects, two chemokines were shown to modulate platelet function, thereby indicated the circulating proteome can affect platelet function. Subsequent analyses demonstrated a broad effect of BMI on plasma proteins, which were enriched for cardiovascular disease possibly exerts downstream effects on platelet function. Larger studies with platelet function data are required to further examine these relationships.
+
